added extension to phone number

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="contact-info">
             <p><strong>Address:</strong> 1330 E Hwy 199, Springtown, TX 76082</p>
             <p><strong>Email:</strong> jacob.white@americanenergyinnovations.com</p>
-            <p><strong>Phone:</strong> +1-817-221-1200</p>
+            <p><strong>Phone:</strong> +1-817-221-1200 ext 132</p>
         </div>
     </div>
 
