--- a/index.html
+++ b/index.html
@@ -5,28 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>App Support</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
+    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; color: #333; }
     h1 { text-align: center; }
     p { line-height: 1.6; }
+    footer { text-align: center; margin-top: 20px; color: #888; }
+    .container { max-width: 800px; margin: 0 auto; background-color: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
     .contact-info { margin-top: 20px; }
     .contact-info p { margin-bottom: 10px; }
-    footer { text-align: center; margin-top: 20px; color: #888; }
   </style>
 </head>
 <body>
